# SwiftLint-Bazel

./: .gitignore  .swiftlint.yml  File.swift  MODULE.bazel  README.md  WORKSPACE
rule_docs/: Rule Directory.md  Swift Syntax Dashboard.md  accessibility_label_for_image.md  accessibility_trait_for_button.md  anyobject_protocol.md  array_init.md  attributes.md  balanced_xctest_lifecycle.md  blanket_disable_command.md  block_based_kvo.md  capture_variable.md  class_delegate_protocol.md  closing_brace.md  closure_body_length.md  closure_parameter_position.md  closure_spacing.md  collection_alignment.md  colon.md  comma.md  comment_spacing.md  computed_accessors_order.md  conditional_returns_on_newline.md  contains_over_filter_count.md  contains_over_filter_is_empty.md  contains_over_first_not_nil.md  contains_over_range_nil_comparison.md  control_statement.md  convenience_type.md  deployment_target.md  direct_return.md  discarded_notification_center_observer.md  discouraged_direct_init.md  discouraged_none_name.md  discouraged_object_literal.md  discouraged_optional_boolean.md  discouraged_optional_collection.md  duplicate_conditions.md  duplicate_enum_cases.md  duplicate_imports.md  duplicated_key_in_dictionary_literal.md  (+166 more)
swiftlint_extra_rules/: BUILD
swiftlint_extra_rules/helpers/: SourceKittenDictionary+Extensions.swift  UnitTestRuleConfiguration.swift  XCTClassConfiguration.swift  XCTResetSharedStateConfiguration.swift
swiftlint_extra_rules/rules/: ForceAndOptionalTryInTestsRule.swift  ThrowableTestCasesRule.swift  XCTMissingSuperSetUpTearDownRule.swift  (+2 more)
