module(
    name = "swiftlint_bazel",
    version = "0.0.0",
    compatibility_level = 1,
    repo_name = "swiftlint_bazel"
)

bazel_dep(name = "swiftlint", version = "0.52.2", repo_name = "SwiftLint")
extra_rules = use_extension("@SwiftLint//bazel:extensions.bzl", "extra_rules")
extra_rules.setup(srcs = "@swiftlint_bazel//swiftlint_extra_rules:extra_rules")

# Uncomment line to make Xcode Project
bazel_dep(name = "rules_xcodeproj", version = "1.5.1")